# dep-types

./: README.md  Temp.hs  dep-types.cabal  stack.yaml
src/Lang/Dependent/: AST.hs  Terms.hs
test/: Spec.hs
