name:                dep-types
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/lehmacdj/dep-types#readme
license:             BSD3
license-file:        LICENSE
author:              Devin Lehmacher
maintainer:          lehmacdj@gmail.com
copyright:           Copyright: (c) 2017 Devin Lehmacher
category:            Miscellaneous
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lang.Dependent.AST,
                       Lang.Dependent.Terms
  build-depends:       base >= 4.7 && < 5,
                       parsec,
                       mtl,
                       containers,
                       comonad,
                       free,
                       bound,
                       deriving-compat,
                       lens,
                       lang-base
  default-language:    Haskell2010

executable dep-types-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dep-types
  default-language:    Haskell2010

test-suite dep-types-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , dep-types
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , tasty-smallcheck
                     , lang-base
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehmacdj/dep-types
